content/docs/3.0/5-create-your-own-cell-template/index.mdx
---
posttype: "docs"
title: Create your own cell template
metaTitle: "Create your own cell template"
metaDescription: "metaDescription"
---

#### Introduction 

Creating a cell template is the best way to customize data visualization and behaviour in ReactGrid.
You can define your own one and then use it as other built-in cell types. 

In this example, we will explain how to make it.

Let's imagine that you need to implement a brand new cell for displaying a country flag.

Expected functionality:

1. In edit mode a cell allows you to type in text without any constraints
2. When a cell is displayed, it should show a country flag based on the cell text

Let's get started!

#### 1. Prepare project file

For this tutorial we are going to use the previous project - [handling changes](/docs/3.0/2-implementing-core-features/1-handling-changes/).
At the beginning we should update columns and rows displayed by the grid.
Cell type in row `1` and `2` will be changed to `flag` at the end. 

```tsx 
const [state, setState] = React.useState(() => ({
    columns: [{ columnId: 0, width: 100 }],
    rows: [
        {
            rowId: 0,
            cells: [{ type: "header", text: "Flag" }]
        },
        {
            rowId: 1,
            cells: [{ type: "text", text: "ger" }]
        },
        {
            rowId: 2,
            cells: [{ type: "text", text: "usa" }]
        },
        {
            rowId: 3,
            cells: [{ type: "text", text: "" }]
        }
    ]
}));
```

#### 2. Creating necessary files

Create new file named `FlagCellTemplate.tsx`, add the same imports as in the listing below and make `flag-cell-style.css`file that
will contain some CSS styles (don't forget to import it into your project's file).

```tsx 
// FlagCellTemplate.tsx

import * as React from "react";
import {
  CellTemplate,
  Cell,
  Compatible,
  Uncertain,
  UncertainCompatible,
  isNavigationKey,
  getCellProperty,
  isAlphaNumericKey,
  keyCodes
} from "@silevis/reactgrid";
import "./flag-cell-style.css";
```

#### 3. Define cell data interface

`type` attribute is necessary in any cell template, in our sample we will refer to this cell template by `flag`.
`text` attribute will store our text and it's also necessary. 

```ts
export interface FlagCell extends Cell {
    type: 'flag';
    text: string;
}
```

#### 4. Creating FlagCellTemplate class

For all defined methods below it is necessary to display and interface the flag cell with internal ReactGrid model correctly.

* `getCompatibleCell` as a parameter gets an incoming cell and returns a compatible cell (with `text` and `value`
  attribute required by [`Compatible`](/docs/3.0/7-api/1-types/1-compatible-cell/) type). 
  In more complex examples `getCellProperty` may throw an exception if the required cell field is `undefined`.

```ts
getCompatibleCell(uncertainCell: Uncertain<FlagCell>): Compatible<FlagCell> {
    const text = getCellProperty(uncertainCell, 'text', 'string');
    const value = parseFloat(text);
    return { ...uncertainCell, text, value };
}
```

* `handleKeyDown` method handles `keyDown` event on this cell template. Here it just returns unchanged cell and enables 
  edit mode when a user performed a click or pressed <kbd>ENTER</kbd> key.

```ts
handleKeyDown(
    cell: Compatible<FlagCell>,
    keyCode: number,
    ctrl: boolean,
    shift: boolean,
    alt: boolean
): { cell: Compatible<FlagCell>; enableEditMode: boolean } {
    if (!ctrl && !alt && isAlphaNumericKey(keyCode))
        return { cell, enableEditMode: true };
    return {
        cell,
        enableEditMode: keyCode === keyCodes.POINTER || keyCode === keyCodes.ENTER
    };
}
```

* `update` - as we are not sure if an incoming cell has the same interface like `FlagCell` so we mark it
  as `UncertainCompatible` (the incoming cell has attributes provided by [`Compatible`](/docs/3.0/7-api/1-types/1-compatible-cell/) 
  but it can have other attributes like `date` from `DateCell`). In our case, we just copy `cell` and replace `text` value.

```ts
update(cell: Compatible<FlagCell>, cellToMerge: UncertainCompatible<FlagCell>): Compatible<FlagCell> {
    return this.getCompatibleCell({ ...cell, text: cellToMerge.text });
}
```

* `render` method returns the content of a cell. In edit mode we will display `input` element. The change which is made in the 
  cell `input` is propagated outside ReactGrid by `onCellChanged` function.

```tsx
render(
    cell: Compatible<FlagCell>,
    isInEditMode: boolean,
    onCellChanged: (cell: Compatible<FlagCell>, commit: boolean) => void
): React.ReactNode {
    if (!isInEditMode) {
        const flagISO = cell.text.toLowerCase(); // ISO 3166-1, 2/3 letters
        const flagURL = `https://restcountries.eu/data/${flagISO}.svg`;
        const alternativeURL = `https://upload.wikimedia.org/wikipedia/commons/0/04/Nuvola_unknown_flag.svg`;
        return (
            <div
                className="rg-flag-wrapper"
                style={{ backgroundImage: `url(${flagURL}), url(${alternativeURL})` }}
            />
        );
    }
    return (
        <input
            ref={input => {
            input && input.focus();
            }}
            defaultValue={cell.text}
            onChange={e =>
                onCellChanged(
                    this.getCompatibleCell({ ...cell, text: e.currentTarget.value }),
                    false
                )
            }
            onCopy={e => e.stopPropagation()}
            onCut={e => e.stopPropagation()}
            onPaste={e => e.stopPropagation()}
            onPointerDown={e => e.stopPropagation()}
            onKeyDown={e => {
            if (isAlphaNumericKey(e.keyCode) || isNavigationKey(e.keyCode))
                e.stopPropagation();
            }}
        />
    );
}
```

#### 5. Styling

To set a flag as the background covering the `div` element, we created CSS `rg-flag-wrapper` class. 
All of the cells have a class name created based on the cell `type` attribute. In our case, the cell class name will be `rg-flag-cell`. 
As `rg-cell` is a flex element we center its content with `justify-content: center;` attribute.

```css
.rg-flag-cell {
  justify-content: center;
}

.rg-flag-wrapper {
  width: 50%;
  height: 80%;
  background-size: cover;
  border: 1px solid #cccccc;
  background-position: center center;
  background-repeat: no-repeat;
}
```

#### 6. Finishing

Go back to `index.tsx` file and add `customCellTemplates` property as shown below and also change `type: "text"` to `type: "flag"`:

```tsx
const [state, setState] = React.useState(() => ({
    columns: [{ columnId: 0, width: 100 }],
    rows: [
        {
            rowId: 0,
            cells: [{ type: "header", text: "Flag" }] 
        },
        {
            rowId: 1,
            cells: [{ type: "flag", text: "ger" }] //highlight-line
        },
        {
            rowId: 2,
            cells: [{ type: "flag", text: "usa" }] //highlight-line
        },
        {
            rowId: 3,
            cells: [{ type: "flag", text: "" }] //highlight-line
        }
    ]
}));
// ...

return (
    <ReactGrid
      rows={state.rows}
      columns={state.columns}
      onCellsChanged={handleChanges}
      customCellTemplates={{ flag: new FlagCellTemplate() }}  //highlight-line
    />
);
```

#### Result

<iframe
    src="https://codesandbox.io/embed/reactgrid-creating-new-cell-template-pdiux?fontsize=14&hidenavigation=1&theme=dark"
    style="width:100%; height:300px; border:0; border-radius: 4px; overflow:hidden;"
    title="reactgrid-creating-new-cell-template"
    allow="accelerometer; ambient-light-sensor; camera; encrypted-media; geolocation; gyroscope; hid; microphone; midi; payment; usb; vr; xr-spatial-tracking"
    sandbox="allow-forms allow-modals allow-popups allow-presentation allow-same-origin allow-scripts"
></iframe>